creazione menu dolci

--- a/pizzeria.html
+++ b/pizzeria.html
@@ -22,7 +22,72 @@
 		</div><!--Menu' Pizze-->
 			
 		<div>
-		
+			<h2>Menù Dolci</h2>
+
+<ul class="menu-dolci">
+    <li>
+        <strong>Tiramisù Classico</strong><br>
+        Dolce tradizionale con savoiardi, mascarpone e caffè<br>
+        <span class="prezzo">€ 5,00</span>
+    </li>
+
+    <li>
+        <strong>Panna Cotta</strong><br>
+        Servita con coulis ai frutti di bosco<br>
+        <span class="prezzo">€ 4,50</span>
+    </li>
+
+    <li>
+        <strong>Cheesecake al Cioccolato</strong><br>
+        Base croccante con crema al cioccolato fondente<br>
+        <span class="prezzo">€ 5,50</span>
+    </li>
+
+    <li>
+        <strong>Crostata della Casa</strong><br>
+        Pasta frolla con marmellata artigianale<br>
+        <span class="prezzo">€ 4,00</span>
+    </li>
+
+    <li>
+        <strong>Profiteroles</strong><br>
+        Bignè ripieni di crema con copertura al cioccolato<br>
+        <span class="prezzo">€ 5,50</span>
+    </li>
+
+    <li>
+        <strong>Pizza alla Nutella</strong><br>
+        Impasto pizza con Nutella e zucchero a velo<br>
+        <span class="prezzo">€ 6,00</span>
+    </li>
+
+    <li>
+        <strong>Calzone Dolce</strong><br>
+        Ripieno di ricotta dolce e gocce di cioccolato<br>
+        <span class="prezzo">€ 5,50</span>
+    </li>
+
+    <li>
+        <strong>Gelato Artigianale</strong><br>
+        Due gusti a scelta<br>
+        <span class="prezzo">€ 3,50</span>
+    </li>
+
+    <li>
+        <strong>Sorbetto al Limone</strong><br>
+        Fresco e digestivo<br>
+        <span class="prezzo">€ 3,00</span>
+    </li>
+
+    <li>
+        <strong>Dolce del Giorno</strong><br>
+        Chiedere al personale<br>
+        <span class="prezzo">€ 4,50</span>
+    </li>
+</ul>
+
+
+			
 		</div><!--Menu' Dolci-->
 			
 		<div>
