Creazione menu bevande

--- a/pizzeria.html
+++ b/pizzeria.html
@@ -26,8 +26,74 @@
 		</div><!--Menu' Dolci-->
 			
 		<div>
-			
+			<h1>Menu Bevande</h1>
+
+			<h2>Acque</h2>
+			<ul>
+				<li>
+				Acqua Naturale (0,5L)
+				<span class="prezzo">€1,50</span>
+				</li>
+				<li>
+				Acqua Frizzante (0,5L)
+				<span class="prezzo">€1,50</span>
+				</li>
+			</ul>
+
+			<h2>Bibite</h2>
+			<ul>
+				<li>
+				Coca-Cola
+				<span class="prezzo">€2,50</span>
+				</li>
+				<li>
+				Fanta
+				<span class="prezzo">€2,50</span>
+				</li>
+				<li>
+				Tè Freddo al Limone
+				<span class="prezzo">€2,50</span>
+				</li>
+			</ul>
+
+			<h2>Birre</h2>
+			<ul>
+				<li>
+				Birra alla Spina (Media)
+				<span class="prezzo">€4,00</span>
+				</li>
+				<li>
+				Birra in Bottiglia
+				<span class="prezzo">€3,50</span>
+				</li>
+			</ul>
+
+			<h2>Vini</h2>
+			<ul>
+				<li>
+				Vino Rosso (Calice)
+				<span class="prezzo">€3,00</span>
+				</li>
+				<li>
+				Vino Bianco (Calice)
+				<span class="prezzo">€3,00</span>
+				</li>
+			</ul>
+
+			<h2>Caffetteria & Amari</h2>
+			<ul>
+				<li>
+				Caffè Espresso
+				<span class="prezzo">€1,20</span>
+				</li>
+				<li>
+				Limoncello
+				<span class="prezzo">€2,50</span>
+				</li>
+			</ul>
+
 		</div><!--Menu' Bevande-->
+		
 	
 		<p>Grazie!</p>
 		
