--- a/pizzeria.html
+++ b/pizzeria.html
@@ -3,7 +3,7 @@
 	<head>
 	
 		<title>Menu' Pizzeria</title>
-		<meta name="author" content="Matteo, Ilenia, Hajar, Mariam"/>
+		<meta name="author" content="Matteo, Ilenia, Hajar, Mariam, Alessia"/>
 		<meta name="description" content="Semplice pagina html che simula una pizzeria"/>
 		<html lang="IT"/>
 		<meta charset="UTF-8"/>
